# SemAI_Multi_agent_workflow

./: .env.example  .gitattributes  .gitignore  ALGORITHM_SEMAI_CREW.md  LARGE_FILES_GUIDE.md  README.md  Self_test_code.ipynb  data_quality_notes.txt  dataset_documentation.txt  provider_cache.json  pyproject.toml  run.bat  run.ps1
.quests/definitions/: QUEST_BENCHMARK_dc1ea4b2.json
.quests/results/: QUEST_BENCHMARK_dc1ea4b2_neural_network_sde_20251210_135329.json
docs/: COMPLETION_CERTIFICATE.txt  DELIVERABLES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  modeling_documentation.md
docs/guides/: ALPHA_VANTAGE_GUIDE.md  DATA_EXTRACTION_API_UPDATE.md  DATA_EXTRACTION_SYSTEM.md  HYPERPARAMETER_TESTING_GUIDE.md  HYPERPARAMETER_TESTING_SUMMARY.md  HYPERPARAMETER_TOOL_README.md  RAG_COMPLETION_SUMMARY.md  RAG_INTEGRATION_PATTERNS.md  RAG_QUICK_START.md  RAG_SYSTEM_GUIDE.md  SIDE_QUEST_SYSTEM.md  TOOLS_OVERVIEW.md
docs/models/: 2d_neural_network_reference.md  artificial_neuron_network_reference.md  neural_network_lv_reference.md  sdenn_reference.md
docs/references/: AVAILABLE_TOOLS.md  DERIVATIVE_PRICING_DATASET.md  GUARDRAIL_CODE_COMPARISON.md  GUARDRAIL_QUICK_REFERENCE.md  GUARDRAIL_SUMMARY.md  LLAMA_GUARDRAIL_INTEGRATION.md
src/semai/: agent_model_mapping.py  agent_softmax_config.py  alpha_vantage_handler.py  builtin_models.py  crew.py  data_extraction_demo.py  data_input_handler.py  derivative_pricing_dataset.py  example_quests.py  guardrail_examples.py  human_interface.py  llm_config.py  main.py  (+9 more)
tests/: rag_examples.py  test_hyperparameter_tool.py
(+14 files in other folders)
