[project]
name = "semai"
version = "0.1.0"
description = "SemAI using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0",
    "kagglehub>=0.3.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
]

[project.scripts]
semai = "semai.main:run"
run_crew = "semai.main:run"
train = "semai.main:train"
replay = "semai.main:replay"
test = "semai.main:test"
run_with_trigger = "semai.main:run_with_trigger"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
